# mid2tmu

./: .gitignore  README.md  batch_convert.sh  midi2tmu.py  pyproject.toml  requirements.txt
midi2tmu/: __init__.py  __main__.py
midi2tmu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
midi2tmu/cli/: main.py
midi2tmu/fm/: __init__.py  voices.py
midi2tmu/midi/: __init__.py  parser.py
midi2tmu/song/: __init__.py  model.py
midi2tmu/tmu/: __init__.py  compression.py  constants.py  converter.py  model.py  writer.py
tests/: test_compression.py  test_writer.py
